# website

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
docs/: index.md
docs/Starter_Pack/: poetry.md  pyenv.md  start_here.md
docs/privacy_policy/: privacy_policy.md
notebooks/: planner.ipynb
notebooks/blog_posts/: list_comps.ipynb
