[tool.poetry]
name = "website"
version = "0.1.0"
description = "My super basic Python site!"
authors = ["Evan Baird <mrcartoonster@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
mkdocs-material = "^5.3.0"
pymdown-extensions = "^7.1"
fontawesome-markdown = "^0.2.6"
mkdocs = "^1.1.2"
pendulum = "^2.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.15.0"
pre-commit = "^2.5.1"
jupyterlab = "^2.1.4"
prettyprinter = "^0.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
